升级为nacos配置